# kidney-disease-clssification-app

./: .gitignore  Dockerfile  LICENSE  README.md  dvc.yaml  main.py  pyproject.toml  requirements.txt  scores.json  setup.py  template.py
app/: main.py
app/models/: image.py
app/routers/: models.py
app/templates/: index.html
config/: config.yaml
notebooks/: 01.data_ingestion.ipynb  02_prepare_base_model.ipynb  04_model_evaluation.ipynb  trials.ipynb
research/: 01.data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_training.ipynb  trials.ipynb
src/kidneyDiseaseNet/: __init__.py
src/kidneyDiseaseNet/components/: data_ingestion.py  model_evaluation_mlflow.py  model_training.py  prepare_base_model.py
src/kidneyDiseaseNet/config/: configuration.py
src/kidneyDiseaseNet/constants/: __init__.py
src/kidneyDiseaseNet/entity/: config_entity.py
src/kidneyDiseaseNet/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/kidneyDiseaseNet/utils/: common.py
