[tool.poetry]
name = "kidneyDiseaseNet"
version = "1.1.0"
description = "Python package designed for building and training Convolutional Neural Networks (CNNs) to classify kidney diseases"
authors = ["Srinath V <srinathvsrinatv863@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Srinath991/kidney-disease-classification-app"
homepage = "https://github.com/Srinath991/kidney-disease-classification-app"
packages = [{include = "kidneyDiseaseNet", from = "src"}]
keywords = ["CNN", "Kidney Disease", "Machine Learning", "Artificial Intelligence"]


[tool.poetry.dependencies]
python = "~3.12"
tensorflow = "2.16.2"
ensure = "1.0.4"
PyYAML = "6.0.2"
joblib = "1.4.2"
python-box= "6.0.2"
pillow = "11.0.0"
scipy = "1.14.1"
gdown = "5.2.0"
mlflow = "2.19.0"
dagshub = "0.4.0"
dvc = "3.58.0"


[tool.poetry.dev-dependencies]
ipykernel= "6.29.5"

[tool.poetry.urls]
bug_tracker = "https://github.com/Srinath991/kidney-disease-classification-app/issues"
documentation = "https://github.com/Srinath991/kidney-disease-classification-app/wiki"

[tool.poetry.extras]
dev = ["pytest", "black" ]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
